# peff

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
cmake/: PeffBuild.cmake  PhulBuild.cmake  peffConfig.cmake.in
example/: CMakeLists.txt
example/cotest/: CMakeLists.txt  main.cc
example/hashtest/: CMakeLists.txt  main.cc
example/lzwhat/: CMakeLists.txt  main.cc
example/maptest/: CMakeLists.txt  main.cc
peff/: CMakeLists.txt  config.h.in
peff/advutils/: CMakeLists.txt  basedefs.h  buffer_alloc.cc  buffer_alloc.h  shared_ptr.cc  shared_ptr.h  unique_ptr.h
peff/base/: CMakeLists.txt  alloc.cc  alloc.h  allocator.cc  allocator.h  assert.h  basedefs.h  deallocable.cc  deallocable.h  misc.cc  misc.h  panic.cc  panic.h  pmr.cc  pmr.h  rcobj.cc  rcobj.h  scope_guard.h  traits.h  uuid.h
peff/containers/: CMakeLists.txt  basedefs.h  binary_heap.h  bitarray.h  bitset.h  dynarray.h  fallible_cmp.cc  fallible_cmp.h  fallible_hash.h  hashmap.h  hashset.h  list.h  map.h  misc.h  option.h  radix_tree.cc  radix_tree.h  rbtree.cc  rbtree.h  set.h  string.cc  string.h  tree.cc  tree.h
peff/utils/: CMakeLists.txt  basedefs.h  bitops.h  byteord.cc  byteord.h  comparator.h  fallible_cmp.h  fallible_hash.cc  fallible_hash.h  hash.cc  hash.h  memory.cc  memory.h  misc.cc  misc.h  option.h  optional.h  pair.h  result.h  scope_guard.h  variant.h
phul/: CMakeLists.txt
phul/base/: CMakeLists.txt  allocator.cc  allocator.h  basedefs.h  pmr.cc  pmr.h  traits.h
phul/containers/: CMakeLists.txt  basedefs.h  dynarray.h  hashset.h  list.h  misc.h  set.h  tree.cc  tree.h
phul/utils/: CMakeLists.txt  basedefs.h  comparator.h  hash.h  misc.cc  misc.h  scope_guard.h
